# seattle-python-401n2

./: .editorconfig  README.md  UPDATE-NOTES.md
class-01/demo/: topics.py
class-01/demo/class-one-topics/: pyproject.toml
class-01/demo/guessing-game/: pyproject.toml
class-01/demo/snakes-cafe/: pyproject.toml
class-02/: README.md
class-02/demo/fizz-buzz/: pyproject.toml
class-03/: README.md
class-03/demo/exception/: exception.py  pyproject.toml
class-03/demo/exceptions/: exceptions.ipynb  pyproject.toml
class-03/demo/file-io/: file_io.ipynb  fileio.py  pyproject.toml
class-03/demo/recursion/: recursion.py
class-03/demo/truthy/: pyproject.toml  truth.py
class-04/: README.md
class-04/demo/dog-pack/: pyproject.toml
class-04/demo/star-wars/: pyproject.toml
class-04/demo/star-wars/star_wars/: star_wars.py
class-04/demo/star-wars/tests/: test_star_wars.py
class-04/lab-starter/: band.py  test_band.py
class-06/: README.md
class-06/demo/dsa/: linked_list.py
class-06/demo/game-of-greed-testing-starter/: pyproject.toml
class-06/starter-tests/: test_banker.py  test_calculate_score.py
class-07/: README.md
class-07/demo/game_of_greed/: game.py  pyproject.toml
class-07/demo/starter-code/game-of-greed/: pyproject.toml
class-07/demo/starter-code/game-of-greed/game_of_greed/: banker.py  game.py  game_logic.py
class-08/demo/: README.md  override.py
class-08/ll_demo/: ll_merge.py
class-09/: README.md  code_challenge.py  exit_example.py  warmup.md
class-09/demo/dunder/: pyproject.toml
class-10/demo/: pyproject.toml
class-10/demo/stacks_and_queues/: stacks_and_queues.py
class-10/demo/tests/: test_queue.py  test_stack.py  test_stacks_and_queues.py
class-10/game-of-greed/: README.md  bots.py  pyproject.toml
class-10/game-of-greed/game_of_greed/: banker.py  game.py  game_logic.py
class-10/game-of-greed/tests/: flo.py  test_game_of_greed.py
class-10/game-of-greed/tests/features/: calculate_score.feature  test_calculate_score_feature.py
class-10/game-of-greed/tests/version_2/: test_sim_basic.py
class-10/game-of-greed/tests/version_3/: test_get_scorers.py  test_sim_advanced.py
class-10/game-of-greed/tests/version_4/: test_keep_scorers.py
class-11/: warmup.md  warmup.py
class-11/numpy-fun/: board.ipynb  pyproject.toml
class-12/: warm-up.md
class-12/broadcasting/: main.ipynb  pyproject.toml
class-12/cereal/: cereal.ipynb  pyproject.toml
class-12/enumerate/: main.py
class-13/demo/: salary1.ipynb  salary_plus_snacks.csv
class-13/demo/salary/: pyproject.toml  salary.ipynb  salary_plus_snacks.csv
class-14/: WARM-UP.md
class-14/demo/: demo_class_14.ipynb  flights.ipynb  pyproject.toml
class-14/demo/fun-with-seaborn/: flights.ipynb  pyproject.toml
class-14/multi/: multi.md  multi.py
class-15/demo/: bt_test.py  pyproject.toml
class-16/: README.md
class-16/demo/: pyproject.toml  scraper.py
class-16/demo/text-classification/: pyproject.toml  text_classifier.ipynb
class-17/: README.md
class-17/demo/: cipher.py  pyproject.toml
class-19/: README.md
class-19/demo/: content.txt  fake.py  pyproject.toml
class-20/: README.md
class-20/broke_test/: pyproject.toml
class-20/test_demo/: pyproject.toml
class-20/test_demo/test_demo/: other.py  primary.py
class-20/test_demo/tests/: test_other.py  test_primary.py  test_test_demo.py
class-26/: README.md  warmup.md  warmup.py
class-26/demo/django-things/: db.sqlite3  manage.py  pyproject.toml
class-26/demo/django-things/django_things/: asgi.py  settings.py  urls.py  wsgi.py
class-26/demo/django-things/templates/: about.html  base.html  home.html
class-26/demo/django-things/thing/: apps.py  tests.py  urls.py  views.py
class-27/: README.md  code_challenge.py  warmup.md  warmup.py
class-28/: README.md  warmup.md
class-28/demo/movies-crud/: db.sqlite3  manage.py  pyproject.toml
class-28/demo/movies-crud/movies/: models.py  tests.py  urls.py  views.py
class-28/demo/movies-crud/movies/migrations/: 0001_initial.py
class-28/demo/movies-crud/movies_crud_project/: asgi.py  settings.py  urls.py  wsgi.py
class-28/demo/movies-crud/templates/: base.html  movie-create.html  movie-delete.html  movie-detail.html  movie-list.html  movie-update.html
class-29/: README.md
class-31/: README.md  warmup.md  warmup.py
class-32/: README.md
class-32/demo/blog/: docker-compose.yml  pyproject.toml
class-32/demo/blog/blog_api/: asgi.py  settings.py  urls.py
class-32/demo/blog/posts/: admin.py  serializer.py  urls.py
class-32/demo/blog/posts/migrations/: 0001_initial.py
class-33/: README.md
class-33/blog/: Dockerfile  docker-compose.yml  manage.py
class-33/demo/blog_auth/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
class-33/demo/blog_auth/blog_project/: settings.py
class-34/: README.md
class-34/demo/: README.md
class-35/graph/: graph.py  pyproject.toml  test_graph.py
class-36/: README.md
class-37/: README.md
class-37/magic-eight-ball/: package-lock.json
class-38/: warmup.md
class-38/magic-eight-ball/: package-lock.json  package.json
class-39/: README.md
class-42/: README.md
class-42/demo/: deco.py  linked_list_iterator.py  pyproject.toml  test_linked_list_iterator.py
class-43/: README.md
class-44/: README.md
class05/demo/: link_list.py
class_36/: challenges.md
config/: .gitattributes
data-structures-and-algorithms/: README.md
data-structures-and-algorithms-python/: README.md  pyproject.toml
data-structures-and-algorithms-python/tests/: test_data_structures_and_algorithms.py
legacy-curriculum/prework/: README.md  account-setup.md  install-git.md  readings.md
prework/: prework-python-html.md  setup.md
resources/readme_templates/: ConsoleAppREADME.md  DataStructureREADME.md  ProjectREADME.md
(+188 files in other folders)
