[tool.poetry]
name = "game-of-greed"
version = "0.1.0"
description = ""
authors = ["JB <jb.tellez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.3.1"
pytest-bdd = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"
black = {version = "^19.10b0", allow-prereleases = true}
full-stack-snacks = "^0.1.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
