[tool.poetry]
name = "star-wars"
version = "0.1.0"
description = ""
authors = ["Roger T. Huba <rogerhuba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
