[tool.poetry]
name = "salary"
version = "0.1.0"
description = ""
authors = ["JB-Tellez <jb.tellez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.3"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
numpy = "^1.18.4"
sklearn = "^0.0"
seaborn = "^0.10.1"
statsmodels = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
