[tool.poetry]
name = "text-classification"
version = "0.1.0"
description = ""
authors = ["JB-Tellez <jb.tellez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.0"
pandas = "^1.0.5"
sklearn = "^0.0"
keras = "^2.4.3"
tensorflow = "^2.2.0"
matplotlib = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
